# Client-server-app-of-a-banking-system

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
data/: accounts.dat.settings
docs/: documentation.tex
src/: account.cpp  account.h  client.cpp  client.h  crypto.cpp  crypto.h  database.cpp  database.h  init_database.cpp  main_client.cpp  main_server.cpp  server.cpp  server.h  view_database.cpp
tests/: test_bank_system.cpp
